tests/diagnostics/packages/imports/duplicate_local_import_name/expect.txt
# exit: 1
input/main.coppice:2:32: error: duplicate imported name 'Token'; use an alias
  import workspace/lib/session { Token }
                                 ^
